show estimated hours and a delta on mobile view.  still TODO: fix up the input styles to match the PNG, will save lots of horizontal space for proejct names

--- a/app/assets/stylesheets/mobile/screen.css.sass
+++ b/app/assets/stylesheets/mobile/screen.css.sass
@@ -1,5 +1,6 @@
 @import "compass/reset"
 @import "compass/css3"
+@import "compass/typography/text/ellipsis"
 @import "compass/utilities/general/float"
 
 @import init
@@ -109,6 +110,14 @@ section.main
       li
         &.client-name
           font-weight: bold
+        
+        label
+          max-width: 90px
+          display: inline-block
+          +ellipsis
+          
+        span.estimated-hours
+          color: #aaa
       
       
   .content
